--- a/projects/kbtv-client/src/app/layout/main-nav/main-nav.component.scss
+++ b/projects/kbtv-client/src/app/layout/main-nav/main-nav.component.scss
@@ -7,7 +7,7 @@ mat-sidenav-container{
 
 mat-sidenav {
     width:202px;
-    background: mat-color($background, app-bar);
+    background: mat-color($background, background);
 }
 
 mat-sidenav-content{
