--- a/projects/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
+++ b/projects/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
@@ -12,3 +12,22 @@ mat-toolbar{
     border:1px solid $accent;
     border-radius:5px;
 }
+
+.custom-buttons, .primary-button, mat-spinner {
+    transition: 
+        background-color 100ms linear, 
+        border-radius 100ms linear, 
+        color 100ms linear;
+}
+
+.overlay-nav{
+    color:white;
+    .primary-button, mat-spinner {
+        background: rgba(0,0,0,0.5);
+        border-radius: 100%;
+    }
+    .custom-buttons{
+        background: rgba(0,0,0,0.5);
+        border-radius: 10px; 
+    }
+}
