--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
@@ -12,7 +12,7 @@
         background:mat-color($background, app-bar);
         position:sticky;
         top:0;
-        z-index:-10;
+        z-index:1;
         overflow:hidden;
         min-height:150px;
         max-height:35vh; 
@@ -23,9 +23,10 @@
         top:64px;
         background:white;
         color:black;
-        z-index:10;
+        z-index:3;
         font-size:19px;
-        font-weight:400;   
+        font-weight:400; 
+        transition: box-shadow 100ms linear;  
         .drag-handle{
             width:100%;
             text-align: center;
@@ -43,13 +44,15 @@
         display:block;
         width:100%;
         height:200%;
+        position: relative;
+        z-index: 2;
     }
 }
 
 .nav-bar{
     width:100%;
     position:absolute;
-    z-index:100;
+    z-index:4;
     transition: background-color 100ms linear;
 }
 
