add button to add header image if no image

--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details.component.html
@@ -1,8 +1,8 @@
 <app-main-skeleton *ngIf="vm$ | async; let vm" paddingDisabled=true>
     
-    <app-header-layout-skeleton [navConfig]="vm.navConfig">
+    <app-header-layout-skeleton [navConfig]="vm.navConfig" [navOverlayDisabled]="!vm.mission?.fileName">
 
-        <img header appImageErrorReloader #img *ngIf="vm.mission?.fileName"
+        <img header appImageErrorReloader #img *ngIf="vm.mission?.fileName; else addHeaderImage"
             (click)="openImageViewer(vm.mission)"
             style="max-width:100%" [src]="vm.mission | appFileUrl: 'missionheader'" 
             (error)="img.src = '/assets/notfound.png?'" alt="Forsidebilde" />
@@ -18,3 +18,9 @@
 </app-main-skeleton>
   
 <input type="file" style="display:none" #imageInput (change)="updateHeaderImage($event.target.files)">
+
+
+<ng-template #addHeaderImage>
+    <app-button [config]="addHeaderImgBtn | transformButton : ButtonTypes.Stroked">
+    </app-button>
+</ng-template>
