remove max width on mat bottom sheet & console log

--- a/projects/kbtv-client/src/styles/custom-theme.scss
+++ b/projects/kbtv-client/src/styles/custom-theme.scss
@@ -88,3 +88,5 @@
 .mat-drawer-container {position: unset!important;}
 
 .mat-icon{vertical-align: middle!important;}
+
+.mat-bottom-sheet-container { max-height: 100vh!important }
