replace mat card in login prompt & remove matcard module

--- a/projects/kbtv-client/src/app/feature-modules/login-prompt/login-prompt/login-prompt.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/login-prompt/login-prompt/login-prompt.component.html
@@ -1,4 +1,4 @@
-<mat-card class="fadeIn" fxLayout="column" fxLayoutAlign="center stretch">
+<div class="fadeIn mat-elevation-z2 foreground-card p-4" fxLayout="column" fxLayoutAlign="center stretch">
 
   <span fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="8px"  class="mb-4">
     <img src="assets/icons/icon-144x144.png" style="width:40px;height:40px" alt="Logo bilde" />
@@ -8,6 +8,6 @@
 
   <app-login-form (submitted)="authenticate($event)"></app-login-form>
  
-</mat-card>
+</div>
 
 
