--- a/projects/kbtv-client/src/app/home/home-top-nav.component.html
+++ b/projects/kbtv-client/src/app/home/home-top-nav.component.html
@@ -16,7 +16,7 @@
   <mat-toolbar-row 
     fxLayout="column" fxLayoutAlign="start center" style="height:20vh;padding-top:12px;">
 
-    <h2>{{ vm.currentUser.firstName + ' ' + vm.currentUser.lastName }}</h2>
+    <a routerLink="/profil"><h2>{{ vm.currentUser.firstName + ' ' + vm.currentUser.lastName }}</h2></a>
     <span class="mat-caption">Sist synkronisert {{ vm.syncTimestamp | date : 	'd.MMM  kl. H:mm'}}</span> 
 
   </mat-toolbar-row>
