--- a/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
+++ b/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
@@ -15,7 +15,10 @@
     background: mat-color($background, card);
 }
 
-.nav-content{ z-index:1; }
+.nav-content{ 
+    transition: box-shadow 150ms linear;  
+    z-index:1; 
+}
 
 .main-content{ overflow-y: auto; }
 
