--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details-view/mission-details-view.component.html
@@ -1,56 +1,63 @@
-<style>.home-tile{ text-align:center; width:100% }</style>
 <div *ngIf="mission">
 
-  <a *ngIf="mission.phoneNumber" href="tel:{{ mission?.phoneNumber }}">
+  <a *ngIf="mission.phoneNumber" href="tel:{{ mission.phoneNumber }}">
     <app-list-item>
       <mat-icon left-side class="pl-2 pr-2">phone</mat-icon>
       {{ mission.phoneNumber }}
-      <ng-container right-side>
-        <span class="color-accent">Ring</span>
-      </ng-container>
+      <span right-side class="color-accent">Ring</span>
     </app-list-item>
     <mat-divider inset=true></mat-divider>
   </a>
  
-  <a href="https://www.google.com/maps/dir/?api=1&destination={{ mission?.address }}&travelmode=driving"
+  <a href="https://www.google.com/maps/dir/?api=1&destination={{ mission.address }}&travelmode=driving"
     target="_blank">
     <app-list-item>
       <mat-icon left-side class="pl-2 pr-2">directions_car</mat-icon>
       Veibeskrivelse
-      <ng-container right-side>
-        <span class="color-accent">Åpne kart</span>
-      </ng-container>
+      <span right-side class="color-accent">Åpne kart</span>
     </app-list-item>
     <mat-divider inset=true></mat-divider>
   </a>
 
   <div class="mat-body-2 ml-5 mt-3">Ressurser</div>
 
-  <app-list-item [routerLink]="['/oppdrag', mission?.id, 'detaljer','bilder']">
+  <app-list-item [routerLink]="['/oppdrag', mission.id, 'detaljer','bilder']">
       <mat-icon left-side class="pl-2 pr-2">photo_library</mat-icon>
       Bilder
-      <ng-container right-side>
-        <span *ngIf="mission.missionImages?.length">{{ mission.missionImages?.length }}</span>
-      </ng-container>
+      <span right-side *ngIf="mission.missionImages?.length">{{ mission.missionImages?.length }}</span>
   </app-list-item>
   <mat-divider inset=true></mat-divider>
 
-  <app-list-item *ifRole="permissions.MissionDocumentList.access" [routerLink]="['/oppdrag', mission?.id, 'detaljer','dokumenter']">
+  <app-list-item *ifRole="permissions.MissionDocumentList.access" [routerLink]="['/oppdrag', mission.id, 'detaljer','dokumenter']">
       <mat-icon left-side class="pl-2 pr-2">folder</mat-icon>
       Dokumenter
-      <ng-container right-side>
-        <span *ngIf="mission.missionDocuments?.length">{{ mission.missionDocuments?.length }}</span>
-      </ng-container>
+      <span right-side *ngIf="mission.missionDocuments?.length">{{ mission.missionDocuments?.length }}</span>
   </app-list-item>
   <mat-divider inset=true></mat-divider>
 
-  <app-list-item *ifRole="permissions.MissionNoteList.access" [routerLink]="['/oppdrag', mission?.id, 'detaljer','notater']">
+  <app-list-item *ifRole="permissions.MissionNoteList.access" [routerLink]="['/oppdrag', mission.id, 'detaljer','notater']">
       <mat-icon left-side class="pl-2 pr-2">rate_review</mat-icon>
       Notater
-      <ng-container right-side>
-        <span *ngIf="mission.missionNotes?.length">{{ mission.missionNotes?.length }}</span>
-      </ng-container>
+      <span right-side *ngIf="mission.missionNotes?.length">{{ mission.missionNotes?.length }}</span>
   </app-list-item>
   <mat-divider inset=true></mat-divider>
+
+  <ng-container *ngIf="mission.employer">
+    <ng-container *ifRole="[roles.Ansatt, roles.Leder, roles.Mellomleder]">
+      <div class="mat-body-2 ml-5 mt-3">Oppdragsgiver</div>
+      <app-employer-list-item [employer]="mission.employer">
+      </app-employer-list-item>   
+      <mat-divider inset=true></mat-divider> 
+    </ng-container>
+  </ng-container>
+
+  <ng-container *ngIf="mission.description">
+    <div class="mat-body-2 ml-5 mt-3">Beskrivelse</div>
+    <app-list-item rippleDisabled=true>
+      <mat-icon left-side class="pl-2 pr-2">comment</mat-icon>
+      <span style="white-space:normal">Dette er en liten beskrivelse av skaden på addressen</span>
+    </app-list-item>
+    <mat-divider inset=true></mat-divider>
+  </ng-container>
 
 </div>
