--- a/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/timesheet-mission-bar/timesheet-mission-bar.component.scss
+++ b/projects/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/timesheet-mission-bar/timesheet-mission-bar.component.scss
@@ -5,4 +5,5 @@
     border-radius:4px!important;
     padding:$gap-size * 0.5px!important; 
     text-align:center;
+    transition: height 200ms linear;
 }
