add mat hints to selected property on data manager

--- a/projects/kbtv-client/src/app/feature-modules/data-management/data-manager/data-property-picker/data-property-picker.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/data-management/data-manager/data-property-picker/data-property-picker.component.html
@@ -1,6 +1,9 @@
 <mat-form-field color="accent" class="data-picker" fxFlex>
   <mat-label>Velg data</mat-label>
-  <mat-select [ngModel]="selectedProperty" (ngModelChange)="changeProperty($event)">
+  <mat-select [ngModel]="selectedProperty" (ngModelChange)="changeProperty($event)" #select>
     <mat-option *ngFor="let prop of properties" value="{{ prop }}">{{ prop | translate }}</mat-option>
   </mat-select>
+  <mat-hint *ngIf="propertyHints[select.value]">
+      {{ propertyHints[select.value] }}
+  </mat-hint>
 </mat-form-field>
