more contrast on bg colors

--- a/projects/kbtv-client/src/app/layout/main-nav/main-nav.component.scss
+++ b/projects/kbtv-client/src/app/layout/main-nav/main-nav.component.scss
@@ -1,13 +1,13 @@
 @import '../../../styles/variables';
 
 mat-sidenav-container{
-    background: mat-color($background, background);
+    background: mat-color($background, app-bar);
     position: unset!important
 }
 
 mat-sidenav {
     width:202px;
-    background: mat-color($background, background);
+    background: mat-color($background, app-bar);
 }
 
 mat-sidenav-content{
