--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
@@ -9,7 +9,7 @@
     .header-container{
         width:100%;
         text-align:center;
-        background:mat-color($background, app-bar);
+        background:mat-color($background, disabled-button-toggle);
         position:sticky;
         top:0;
         z-index:1;
