--- a/projects/kbtv-client/src/app/home/home.component.scss
+++ b/projects/kbtv-client/src/app/home/home.component.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .main-container{
-    background: mat-color($background, card);
+    background: mat-color($background, background);
     height:100%;
     width:100%;
     overflow:hidden;
