--- a/projects/kbtv-client/src/app/feature-modules/profile/profile/profile.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/profile/profile/profile.component.html
@@ -21,7 +21,7 @@
     </app-list-item>
     <mat-divider inset=true></mat-divider>
     
-    <app-list-item (click)="syncAll()">
+    <app-list-item (tap)="syncAll()">
       <mat-icon left-side class="pl-2 pr-2">update</mat-icon>
       <div>Synkroniser data</div>
       <div class="mat-caption">
@@ -39,7 +39,7 @@
     </app-list-item>
     <mat-divider inset=true></mat-divider>
 
-    <app-list-item (click)="logout()">
+    <app-list-item (tap)="logout()">
       <mat-icon left-side class="pl-2 pr-2">power_settings_new</mat-icon>
       Logg ut
     </app-list-item>
