--- a/projects/kbtv-client/src/app/shared-app/components/nav-item/nav-item.component.html
+++ b/projects/kbtv-client/src/app/shared-app/components/nav-item/nav-item.component.html
@@ -1,12 +1,12 @@
 <ng-container *ifRole="navButton.allowedRoles">
     <a matRipple *ngIf="navButton.routerLink else categoryButton" 
-        (click)="alertNavigation()" [routerLink]="navButton.routerLink" [routerLinkActive]="['color-accent']">
+        (tap)="alertNavigation()" [routerLink]="navButton.routerLink" [routerLinkActive]="['color-accent']">
         <mat-icon>{{navButton.icon}}</mat-icon>
         <span class="ml-2 mr-2">{{navButton.text}}</span>
     </a>
 
     <ng-template #categoryButton>
-        <a matRipple (click)="toggleChildren()">
+        <a matRipple (tap)="toggleChildren()">
             <mat-icon>{{navButton.icon}}</mat-icon>
             <span class="ml-2 mr-2">{{navButton.text}}</span>
             <mat-icon *ngIf="navButton.children && navButton.children.length > 0" [@halfwayRotate]="childrenShown">
