--- a/projects/kbtv-client/src/app/shared/components/image-viewer/image-viewer.component.html
+++ b/projects/kbtv-client/src/app/shared/components/image-viewer/image-viewer.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar class="overlay_container image_toolbar" fxLayout="row" fxLayoutAlign="space-between center" 
     [fxHide]="toolbarHidden">
-    <button mat-icon-button aria-label="Lukk" (click)="close()">
+    <button mat-icon-button aria-label="Lukk" (tap)="close()">
         <mat-icon>close</mat-icon>
     </button>
-    <button mat-icon-button (click)="openBottomSheet()"><mat-icon>more_vert</mat-icon></button>
+    <button mat-icon-button (tap)="openBottomSheet()"><mat-icon>more_vert</mat-icon></button>
 </mat-toolbar>
 
 <img *ngIf="currentImage" alt="oppdragsbilde"
