--- a/projects/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
+++ b/projects/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
@@ -11,7 +11,7 @@
         </app-button>
 
         <ng-template #menuBtn>
-            <button mat-icon-button aria-label="Toggle sidenav" (click)="onMenuButtonClick()" fxHide.gt-xs>
+            <button mat-icon-button aria-label="Toggle sidenav" (tap)="onMenuButtonClick()" fxHide.gt-xs>
                 <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
             </button>
         </ng-template>
