--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/note-item/note-item.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-note-list/mission-note-list/note-item/note-item.component.html
@@ -7,7 +7,7 @@
         </span>
 
         
-        <button *ifRole="can.update" (click)="editNote()" mat-button color="accent"
+        <button *ifRole="can.update" (tap)="editNote()" mat-button color="accent"
             aria-label="Rediger notat">
             Oppdater
         </button>       
