--- a/projects/kbtv-client/src/app/shared/components/dynamic-form-questions/auto-complete-question/auto-complete-question.component.html
+++ b/projects/kbtv-client/src/app/shared/components/dynamic-form-questions/auto-complete-question/auto-complete-question.component.html
@@ -31,7 +31,7 @@
         <mat-hint *ngIf="question.hint">{{ question.hint }}</mat-hint>
 
         <button mat-icon-button matSuffix *ngIf="question.resetable && control && !control.disabled && control.value" aria-label="Clear" 
-            (click)="control.setValue(''); control.markAsDirty()">
+            (tap)="control.setValue(''); control.markAsDirty()">
             <mat-icon>close</mat-icon>
         </button>
 
