--- a/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
+++ b/projects/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
@@ -5,6 +5,7 @@
     z-index:1;
     height:100%;
     width:100%;
+    background: mat-color($background, app-bar);
 }
 .content-container{
     position:relative;
