--- a/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
+++ b/projects/kbtv-client/src/app/feature-modules/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
@@ -8,7 +8,7 @@
         <app-selectable-card *ngFor="let img of vm.images;trackBy: trackByImg"
             class="image" [id]="img.id" selectedText="Bilde valgt">
             <img appImageErrorReloader (tap)="openImageViewer(img, vm.images)" class="entity-card"  alt="oppdragsbilde"
-                [src]="img | appFileUrl: 'oppdrag-thumbnail'"/> 
+                [src]="img | appFileUrl: FileFolder.MissionImageThumbnail"/> 
         </app-selectable-card>  
 
     </div>
